finished xcloud authentication
